# glaucus

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
glaucus/: __init__.py  autoencoders.py  blocks.py  fcblocks.py  gblocks.py  layers.py  rfloss.py  utils.py
tests/: test_autoencoders.py  test_blocks.py  test_layers.py  test_rfloss.py  test_version.py
